apps/generic/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    spec:
      containers:
        - name: container
          image: changeme
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: yasr-volume
          persistentVolumeClaim:
            claimName: yasr-volume
        - name: backup-volume
          persistentVolumeClaim:
            claimName: backup-volume
        - name: main-volume
          persistentVolumeClaim:
            claimName: main-volume
