apps/generic/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
