apps/generic/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ${INGRESS_HOSTNAME}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - hosts:
        - ${INGRESS_HOSTNAME}
      secretName: internal-ingress-cert
